--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 </head>
 <body> 
 
-  Improve your front-end skills by building projects
+  <div>
+    <img src="./images/image-qr-code.png" />
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    <h1>Improve your front-end skills by building projects</h1>
+
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
