--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
   <title>Frontend Mentor | QR code component</title>
 
   <link rel="stylesheet" type="text/css" href="./styles.css" />
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body> 
 
-  <div>
-    <img src="./images/image-qr-code.png" />
+  <div class="wrapper">
 
-    <h1>Improve your front-end skills by building projects</h1>
+    <div class="card">
+      <div class="card-content">
+        <img src="./images/image-qr-code.png" />
+        <div class="card-text">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </div>
+    </div>
 
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Liberty</a>.
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Liberty</a>.</p>
+    </div>
+
   </div>
 </body>
 </html>
