--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="attribution">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Liberty</a>.</p>
+      Coded by <a href="https://lslannan-portfolio.netlify.app/">Liberty</a>.</p>
     </div>
 
   </div>
