--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body> 
 
-  <div class="wrapper">
+  <main class="wrapper">
 
     <div class="card">
       <div class="card-content">
-        <img src="./images/image-qr-code.png" />
+        <img src="./images/image-qr-code.png" alt="qr code on blue background"/>
         <div class="card-text">
           <h1>Improve your front-end skills by building projects</h1>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
@@ -33,6 +33,6 @@
       Coded by <a href="https://lslannan-portfolio.netlify.app/">Liberty</a>.</p>
     </div>
 
-  </div>
+  </main>
 </body>
 </html>
